--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "react-native-calendar": "^0.13.1",
     "react-router-dom": "^6.18.0",
     "react-scripts": "5.0.1",
+    "styled-components": "^6.1.1",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
